feat: adds config endpoint
