# internal/http/dto/config.go
@@ -1,0 +1,8 @@
+package dto
+
+type ConfigResponse struct {
+	Status      string `json:"status" example:"ok"`
+	Port        string `json:"port" example:"ok"`
+	DatabaseUrl string `json:"databaseUrl" example:"ok"`
+	Secret      string `json:"secret" example:"ok"`
+}
